@@ -1,4 +1,5 @@
 #!/usr/bin/env ruby
+require 'rubygems' unless defined?(Gem)
 
 # We load padrino-gen
 padrino_gen_path = File.expand_path('../../lib', __FILE__)
